lab0415/mariadb-ns-deploy-svc.yml
---
apiVersion: v1
kind: Namespace
metadata: 
  name: aws9

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mariadb-deploy    # deployment 이름
  namespace: aws9
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: db       # pod에 지정된 label과 동일해야한다!
  template:        # 여기서부터 아래쪽으로 작성한 내용 : pod
    metadata: 
      labels: 
        app: db
    spec:           # 이 아래 부분이 컨테이너
      containers:
      - name: mariadb-ctn
        image: mariadb:10.4
        env:            # 환경변수 지정, 특히 mariadb의 경우 root password는 필수!
        - name: MARIADB_ROOT_PASSWORD   # = MYSQL_ROOT_PASSWORD
          value: "test1234"
        ports:
        - containerPort: 3306
      tolerations:    # 아래내용으로 막힌 정책을 풀어줘!!
        - key: node-role.kubernetes.io/control-plane
          operator: Equal
          value: ""
          effect: NoSchedule
      nodeSelector:
        kubernetes.io/hostname: master

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: aws9
spec: 
  type: LoadBalancer
  selector:     # 이 lb 로 접속하면 아래의 label이 있는 pod 로 포워딩 됌.
    app: db
  ports:  
    - protocol: TCP
      port: 3306
      targetPort: 3306
