lab0415/quizdeployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aws9

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws9-blue
  namespace: aws9
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aws9
      version: blue   # 나는 이러한 key:value를 갖는 Pod를 3개 유지할게! (controller가 담당)
  template:     # 실제적인 Pod의 구성 정보
    metadata:
      labels:
        app: aws9
        version: blue
    spec:
      containers: 
      - name: blue-container
        image: taeseonkim/aws9:blue
        resources:
          requests:
            cpu: "250m"
            memory: "32Mi"
          limits:
            cpu: "500m"
            memory: "64Mi"
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws9-green
  namespace: aws9
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aws9
      version: green    # 나는 이러한 key:value를 갖는 Pod를 3개 유지할게! (controller가 담당)
  template:       # 실제적인 Pod의 구성 정보
    metadata:
      labels:
        app: aws9
        version: green
    spec:
      containers: 
      - name: green-container
        image: taeseonkim/aws9:green
        resources:
          requests:
            cpu: "500m"
            memory: "32Mi"
          limits:
            cpu: "1000m"
            memory: "64Mi"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: aws9-svc
  namespace: aws9
spec:
  type: LoadBalancer
  selector:
    app: aws9
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
