lab0415/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws9-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: www.aws9.pri
    http:
      paths:
      - path: "/shop(/)?$"   # www.aws9.pri/shop
        pathType: ImplementationSpecific
        backend:
          service: 
            name: aws9-svc-shop
            port:
              number: 80     # cluster-ip의 포트번호
      - path: "/blog(/)?$"   # www.aws9.pri/blog
        pathType: ImplementationSpecific
        backend:
          service: 
            name: aws9-svc-blog
            port:
              number: 80    # cluster-ip의 포트번호
